<resources>
    <string name="app_name">Smart Screen</string>
    <string name="time_on">Time on:</string>
    <string name="time_off">Time off:</string>
    <string name="start">Start</string>
    <string name="settings">Settings</string>
    <string name="time_format">%02d:%02d"</string>
    <string name="hour_on">09:00</string>
    <string name="hour_off">18:00</string>

    <string name="day_mon">Mon</string>
    <string name="day_tue">Tue</string>
    <string name="day_wen">Wen</string>
    <string name="day_thu">Thu</string>
    <string name="day_fri">Fri</string>
    <string name="day_sat">Sat</string>
    <string name="day_sun">Sun</string>

</resources>
